# AOC2024

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: day1.cpp.A333D338DFC21B8C.idx  day1.cppm.9F087008B1001525.idx  main.cpp.A339E0BF39E48274.idx
src/: main.cpp
src/days/: Day1.cppm  Day10.cppm  Day11.cppm  Day12.cppm  Day13.cppm  Day14.cppm  Day15.cppm  Day16.cppm  Day17.cppm  Day18.cppm  Day19.cppm  Day2.cppm  Day20.cppm  Day3.cppm  Day4.cppm  Day5.cppm  Day6.cppm  Day7.cppm  Day8.cppm  Day9.cppm
src/rendering/: maingui.cppm
src/utils/: Files.cppm
